--- a/app/views/tempInformation.html
+++ b/app/views/tempInformation.html
@@ -1,52 +1,18 @@
 
 
-<div class='infoBlock conditionalShow' >
-
-   <!-- tabs -->
-   <div id="mainTabs" class="tabs-below">
-       <ul class="nav nav-tabs theMainTabs"> 
-
-<!--                <li class="active"><a id="tackTab" href="#a" data-toggle="tab" data-placement="bottom" class="tip"><i style="margin-left:1px !important;" class="custom-icon-2 icon-pin slide-icons">&#xe801;</i></a></li>
-               <li><a id="compassTab" href="#b" data-toggle="tab" data-placement="bottom" class="tip"><i style="margin-left:1px !important;" class="custom-icon-2 icon-map slide-icons">&#xe808;</i></a></li>
-               <li><a id="pencilTab" href="#c" data-toggle="tab" data-placement="bottom" class="tip"><i style="margin-left:1px !important;" class="fa fa-pencil fa-4 slide-icons"></i></a></li>
-               <li><a id="gearTab" href="#d" data-toggle="tab" data-placement="bottom" class="tip"><i style="margin-left:1px !important;" class="custom-icon-2 icon-cog-1 slide-icons">&#xe807;</i></a></li> -->
-
-<!--                <li class="active" ng-click="select($index)" ng-class="{sel: $index == selected}"><a id="tackTab" href="#a" data-toggle="tab" data-placement="bottom" title="Intro"><i style="margin-left:1px !important;" class="custom-icon-2 icon-pin slide-icons tip">&#xe801;</i></a></li>
-               <li ng-click="select($index)" ng-class="{sel: $index == selected}"><a id="compassTab" href="#b" data-toggle="tab" data-placement="bottom" title="Display"><i style="margin-left:1px !important;" class="custom-icon-2 icon-map slide-icons tip">&#xe808;</i></a></li>
-               <li ng-click="select($index)" ng-class="{sel: $index == selected}"><a id="pencilTab" href="#c" data-toggle="tab" data-placement="bottom" title="Tools"><i style="margin-left:1px !important;" class="fa fa-pencil fa-4 slide-icons tip"></i></a></li>
-               <li ng-click="select($index)" ng-class="{sel: $index == selected}"><a id="gearTab" href="#d" data-toggle="tab" data-placement="bottom" title="Resources"><i style="margin-left:1px !important;" class="custom-icon-2 icon-cog-1 slide-icons tip">&#xe807;</i></a></li> -->
-
-               <!--    <button title="Reset Pricing" type="button"
-                          class="btn btn-mini resetPrice"
-                          data-placement='bottom'>
-                      <i class="icon-refresh"></i>
-                  </button> -->
-
-
-<!--                   <li class="tackLi active" ng-click="saveTab($event)"><a id="tackTab" href="#a" data-toggle="tab" data-placement="bottom" title="Intro"><i style="margin-left:1px !important;" class="custom-icon-2 icon-pin slide-icons tip">&#xe801;</i></a></li>
-                  <li class="compassLi" ng-click="saveTab($event)"><a id="compassTab" href="#b" data-toggle="tab" data-placement="bottom" title="Display"><i style="margin-left:1px !important;" class="custom-icon-2 icon-map slide-icons tip">&#xe808;</i></a></li>
-                  <li class="pencilLi" ng-click="saveTab($event)"><a id="pencilTab" href="#c" data-toggle="tab" data-placement="bottom" title="Tools"><i style="margin-left:1px !important;" class="fa fa-pencil fa-4 slide-icons tip"></i></a></li>
-                  <li class="gearLi" ng-click="saveTab($event)"><a id="gearTab" href="#d" data-toggle="tab" data-placement="bottom" title="Resources"><i style="margin-left:1px !important;" class="custom-icon-2 icon-cog-1 slide-icons tip">&#xe807;</i></a></li> -->
-
-<!--                   <li class="tackLi active" ng-click="saveMainTab($event)"><a id="tackTab" href="#a" data-toggle="tab" data-placement="bottom" title="Intro"><i style="margin-left:1px !important;" class="custom-icon-2 icon-pin slide-icons tip">&#xe801;</i></a></li>
-                  <li class="compassLi" ng-click="saveMainTab($event)"><a id="compassTab" href="#b" data-toggle="tab" data-placement="bottom" title="Display"><i style="margin-left:1px !important;" class="custom-icon-2 icon-map slide-icons tip">&#xe808;</i></a></li>
-                  <li class="pencilLi" ng-click="saveMainTab($event)"><a id="pencilTab" href="#c" data-toggle="tab" data-placement="bottom" title="Tools"><i style="margin-left:1px !important;" class="fa fa-pencil fa-4 slide-icons tip"></i></a></li>
-                  <li class="gearLi" ng-click="saveMainTab($event)"><a id="gearTab" href="#d" data-toggle="tab" data-placement="bottom" title="Resources"><i style="margin-left:1px !important;" class="custom-icon-2 icon-cog-1 slide-icons tip">&#xe807;</i></a></li> -->
-
-
-                  <li class="tackLi active" ng-click="saveMainTab($event)"><a id="tackTab" href="#introTab" data-toggle="tab" data-placement="bottom" title="Intro"><i style="margin-left:1px !important;" class="custom-icon-2 icon-pin slide-icons tip">&#xe801;</i></a></li>
-                  <li class="compassLi" ng-click="saveMainTab($event)"><a id="compassTab" href="#displayTab" data-toggle="tab" data-placement="bottom" title="Display"><i style="margin-left:1px !important;" class="custom-icon-2 icon-map slide-icons tip">&#xe808;</i></a></li>
-                  <li class="pencilLi" ng-click="saveMainTab($event)"><a id="pencilTab" href="#toolsTab" data-toggle="tab" data-placement="bottom" title="Tools"><i style="margin-left:1px !important;" class="fa fa-pencil fa-4 slide-icons tip"></i></a></li>
-                  <li class="gearLi" ng-click="saveMainTab($event)"><a id="gearTab" href="#resourcesTab" data-toggle="tab" data-placement="bottom" title="Resources"><i style="margin-left:1px !important;" class="custom-icon-2 icon-cog-1 slide-icons tip">&#xe807;</i></a></li>
+<div class='infoCard conditionalShow' >
 
 
 
-                  
 
 
-      
-       </ul>
-   </div>
+  <!-- removed the tabs 'mainTabs' -->
+
+
+
+  
+
+
 
 
    <script>
