--- a/app/views/tempSelectProp.html
+++ b/app/views/tempSelectProp.html
@@ -1,12 +1,16 @@
 
 
-   <div id='PropInfoDialog' title='Select Property' class='conditionalShow' ng-controller='accordionCtrl'>
-
+   <div id='PropInfoDialog' style="" title='Select Property' class='conditionalShow' ng-controller='accordionCtrl'>
+   <!-- height:auto !important; background-color:blue; -->
    <!-- ionic icons: http://ionicons.com/ -->
 
 
+<!-- testcontainer -->
+<!--    <div id="testcontainer"> -->
+
+
              <!-- Accordion -->
-              <div class='accordionStyleNew'>
+              <div class='accordionStyleNew'> <!-- parentcontainer -->
                 <accordion close-others='oneAtATime'>
 
                  <!-- Property Information -->
@@ -634,6 +638,11 @@
 
 
 
+                      <!-- garbage test -->
+                     <!-- <div id="fillerbox" style="height:100%;"></div> -->
+
+
+
                      <div class="StrLabel" >
                        <p>{{data.SiteAddress}}</p>
                      </div>
@@ -647,4 +656,9 @@
                 </div> 
 
 
+
+              <!-- </div> --> <!-- /test container -->
+
+
          </div>
+
