--- a/app/views/tempTools.html
+++ b/app/views/tempTools.html
@@ -1,16 +1,17 @@
 
- <div id='toolsDirective' style='padding:7px; border:white;'>
+<!--  <div id='toolsDirective' style='padding:7px; border:white;'> -->
    <!-- Title -->
-   <div id='toolsHeader' class='alert alert-info conditionalShow' role='alert' style='padding:7px;'>Tools
+<!--    <div id='toolsHeader' class='alert alert-info conditionalShow' role='alert' style='padding:7px;'>Tools -->
      <!-- <span id='introToggle' class='fa fa-times'></span> -->
      <!-- <span id='toolsToggle' class='fa fa-chevron-left'></span> -->
-     <span id='toolsToggle' class='ion-chevron-left'></span>
+<!--      <span id='toolsToggle' class='ion-chevron-left'></span>
      
-   </div>
+   </div> -->
 
 
    <!-- CONTENT -->
-   <div style="margin-top:60px;">
+   <div class="skinnySection" > 
+
 
 
 
@@ -455,7 +456,7 @@
 
 
           <!-- Spacer -->
-          <div style="padding: 20px 30px 0;"></div>
+<!--           <div style="padding: 20px 30px 0;"></div> -->
 
 
 
@@ -684,4 +685,4 @@
 
    </div> <!--END CONTENT -->
 
- </div>
+<!--  </div> -->
