--- a/app/css/tabs-style.css
+++ b/app/css/tabs-style.css
@@ -489,12 +489,28 @@ border-color: #eeeeee #eeeeee #eeeeee #232323;
 
 /* the main tab navi element */
 
-#mainTabs {
 
+
+div.mainTabs {
+  position: absolute;
+  bottom:10px;
+  left:10px;
+
+}
+.mainTabs {
+
+/*  margin-left:32px !important;
+  margin-right:32px !important;
+  margin-bottom:10px !important;
+*/
   /*background-color:#222;*/
   background-color:transparent;
 
-  position: relative;
+  /*position: relative;*/
+
+
+
+
 /*  margin-left:15px !important;
   margin-right:15px !important;*/ /* both of these commented out */
 
@@ -508,9 +524,9 @@ border-color: #eeeeee #eeeeee #eeeeee #232323;
   margin-right:28px !important;*/
 /*  margin-left:30px !important;
   margin-right:30px !important;*/
-  margin-left:32px !important;
+/*  margin-left:32px !important;
   margin-right:32px !important;
-  margin-bottom:10px !important;
+  margin-bottom:10px !important;*/
 
 /*  margin-left:29.5px !important;
   margin-right:28px !important;
@@ -522,20 +538,20 @@ border-color: #eeeeee #eeeeee #eeeeee #232323;
 
 }
 
-#mainTabs > ul li {
+.mainTabs > ul li {
 /*  width:46.5px !important;*/
 float:left !important;
 /*border:0px !Important;*/
 }
 
-#mainTabs > ul li:first-child {
+.mainTabs > ul li:first-child {
 /*  margin-left:28px !important;*/
 /*  width:46.5px !important;*/
 /*float:right !important;*/
 /*border:0px !Important;*/
 }
 
-#mainTabs > ul li:last-child {
+.mainTabs > ul li:last-child {
 /*  margin-right:28px !important;*/
 /*  width:46.5px !important;*/
 /*float:right !important;*/
@@ -544,14 +560,14 @@ float:left !important;
 
 
 
-#mainTabs > ul li:last-child {
+.mainTabs > ul li:last-child {
 /*  width:46.5px !important;*/
 /*float:right !important;*/
 /*border:0px !Important;*/
 }
 
 
-#mainTabs > ul {
+.mainTabs > ul {
   /* for right vert tabs */
 /*position: absolute;
 left:160px !important;
@@ -640,6 +656,16 @@ animation: load8 1.1s infinite linear;
 /* the main tab navi element */
 
 #mainTabs {
+  position: absolute;
+  bottom:10px;
+  left:10px;
+  margin-left:28px !important;
+  margin-right:28px !important;
+  margin-bottom:10px !important;
+}
+
+
+.mainTabs {
 
   /*background-color:#222;*/
   background-color:transparent;
@@ -654,13 +680,18 @@ animation: load8 1.1s infinite linear;
 
 
 
-/*  margin-left:28px !important;
-  margin-right:28px !important;*/
-/*  margin-left:30px !important;
-  margin-right:30px !important;*/
-  margin-left:32px !important;
-  margin-right:32px !important;
+  margin-left:28px !important;
+  margin-right:28px !important;
   margin-bottom:10px !important;
+/*  margin-left:30px !important;
+  margin-right:30px !important;
+*/
+/*  margin-left:32px !important;
+  margin-right:32px !important;
+  margin-bottom:10px !important;*/
+
+
+
 
 /*  margin-left:29.5px !important;
   margin-right:28px !important;
